book: update fa
Updated via the `update-book.yml` GitHub workflow.

--- a/external/book/content/book/fa/v2/GitHub-گیت-هاب-Account-Setup-and-Configuration-ستاپ-و-کانفیگ-کردن-اکانت.html
+++ b/external/book/content/book/fa/v2/GitHub-گیت-هاب-Account-Setup-and-Configuration-ستاپ-و-کانفیگ-کردن-اکانت.html
@@ -29,9 +29,11 @@ url: "/book/fa/v2/GitHub-گیت-هاب-Account-Setup-and-Configuration-ستاپ-
 اولین کاری که باید انجام دهید، ایجاد یک حساب کاربری رایگان است.
 کافی است به نشانی <a href="https://github.com" class="bare">https://github.com</a> بروید، یک نام کاربری که قبلاً انتخاب نشده باشد وارد کنید، یک آدرس ایمیل و رمز عبور مشخص کنید و روی دکمه‌ی سبز بزرگ «Sign up for GitHub» کلیک کنید.</p>
 </div>
-<div class="paragraph">
-<p>فرم ثبت نام گیت هاب.
-image::images/signup.png[The GitHub sign-up form.]</p>
+<div class="imageblock">
+<div class="content">
+<img src="{{< relurl "book/fa/v2/images/signup.png" >}}" alt="The GitHub sign-up form.">
+</div>
+<div class="title">نمودار 82. The GitHub sign-up form.</div>
 </div>
 <div class="paragraph">
 <p>در مرحله‌ی بعد، صفحه‌ی قیمت‌گذاری پلن‌های ارتقاءیافته را مشاهده خواهید کرد، اما فعلاً می‌توانید با خیال راحت آن را نادیده بگیرید.
@@ -77,7 +79,7 @@ image::images/signup.png[The GitHub sign-up form.]</p>
 <div class="content">
 <img src="{{< relurl "book/fa/v2/images/account-settings.png" >}}" alt="The ``Account settings'' link.">
 </div>
-<div class="title">نمودار 82. The “Account settings” link.</div>
+<div class="title">نمودار 83. The “Account settings” link.</div>
 </div>
 <div class="paragraph">
 <p>سپس بخش «SSH keys» را از سمت چپ صفحه انتخاب کنید.</p>
@@ -86,7 +88,7 @@ image::images/signup.png[The GitHub sign-up form.]</p>
 <div class="content">
 <img src="{{< relurl "book/fa/v2/images/ssh-keys.png" >}}" alt="The ``SSH keys'' link.">
 </div>
-<div class="title">نمودار 83. The “SSH keys” link.</div>
+<div class="title">نمودار 84. The “SSH keys” link.</div>
 </div>
 <div class="paragraph">
 <p>از آنجا، روی دکمه "<code>Add an SSH key</code>" کلیک کنید، یک نام برای کلید خود وارد کنید، محتوای فایل کلید عمومی <code>~/.ssh/id_rsa.pub</code> (یا هر اسمی که برای آن گذاشته‌اید) را در کادر متن قرار دهید و سپس روی «Add key» کلیک کنید.</p>
@@ -117,7 +119,7 @@ image::images/signup.png[The GitHub sign-up form.]</p>
 <div class="content">
 <img src="{{< relurl "book/fa/v2/images/your-profile.png" >}}" alt="The ``Profile'' link.">
 </div>
-<div class="title">نمودار 84. The “Profile” link.</div>
+<div class="title">نمودار 85. The “Profile” link.</div>
 </div>
 <div class="paragraph">
 <p>ما یک نسخه از لوگوی Git را که روی هارد دیسک خود داریم انتخاب می‌کنیم و سپس این فرصت را خواهیم داشت که آن را برش (crop) دهیم.</p>
@@ -126,7 +128,7 @@ image::images/signup.png[The GitHub sign-up form.]</p>
 <div class="content">
 <img src="{{< relurl "book/fa/v2/images/avatar-crop.png" >}}" alt="Crop your uploaded avatar.">
 </div>
-<div class="title">نمودار 85. Crop your avatar</div>
+<div class="title">نمودار 86. Crop your avatar</div>
 </div>
 <div class="paragraph">
 <p>اکنون در هر جایی از سایت که فعالیت داشته باشید، دیگران تصویر آواتار شما را در کنار نام کاربری‌تان خواهند دید.</p>
@@ -145,7 +147,7 @@ image::images/signup.png[The GitHub sign-up form.]</p>
 <div class="content">
 <img src="{{< relurl "book/fa/v2/images/email-settings.png" >}}" alt="Add all your email addresses.">
 </div>
-<div class="title">نمودار 86. Add email addresses</div>
+<div class="title">نمودار 87. Add email addresses</div>
 </div>
 <div class="paragraph">
 <p>در بخش <a href="{{< relurl "book/fa/v2/ch00/_add_email_addresses" >}}">Add email addresses</a> می‌توانیم برخی از حالت‌های مختلف مربوط به آدرس‌های ایمیل را ببینیم:</p>
@@ -173,7 +175,7 @@ image::images/signup.png[The GitHub sign-up form.]</p>
 <div class="content">
 <img src="{{< relurl "book/fa/v2/images/2fa-1.png" >}}" alt="2FA in the Security Tab">
 </div>
-<div class="title">نمودار 87. 2FA in the Security Tab</div>
+<div class="title">نمودار 88. 2FA in the Security Tab</div>
 </div>
 <div class="paragraph">
 <p>اگر روی دکمه «Set up two-factor authentication» کلیک کنید، به صفحه‌ای هدایت می‌شوید که در آن می‌توانید روش دلخواه خود را برای دریافت کد دومرحله‌ای انتخاب کنید:
