book: update de
Updated via the `update-book.yml` GitHub workflow.

--- a/external/book/content/book/de/v2/Erste-Schritte-Kurzer-Überblick-über-die-Historie-von-Git.html
+++ b/external/book/content/book/de/v2/Erste-Schritte-Kurzer-Überblick-über-die-Historie-von-Git.html
@@ -23,11 +23,11 @@ aliases:
 ---
 <h2 id="_kurzer_überblick_über_die_historie_von_git">Kurzer Überblick über die Historie von Git</h2>
 <div class="paragraph">
-<p>Wie viele großartige Dinge im Leben, entstand Git aus einer Prise kreativem Chaos und hitziger Diskussion.</p>
+<p>Git entstand wie viele großartige Dinge im Leben aus hitziger Diskussion und einer Prise kreativem Chaos.</p>
 </div>
 <div class="paragraph">
 <p>Der Linux-Kernel ist ein Open-Source-Software-Projekt von erheblichem Umfang.
-Während der frühen Jahre der Linux-Kernel Entwicklung (1991 - 2002) wurden Änderungen an diesem, in Form von Patches und archivierten Dateien, herumgereicht.
+Während der frühen Jahre der Linux-Kernel Entwicklung (1991 - 2002) wurden Änderungen am Kernel in Form von Patches und archivierten Dateien herumgereicht.
 2002 begann man dann, ein proprietäres DVCS mit dem Namen Bitkeeper zu verwenden.</p>
 </div>
 <div class="paragraph">
@@ -56,6 +56,6 @@ Die Ziele des neuen Systems waren unter anderem:</p>
 </div>
 <div class="paragraph">
 <p>Seit seiner Geburt 2005 entwickelte sich Git kontinuierlich weiter und reifte zu einem System heran, das einfach zu bedienen ist, die ursprünglichen Ziele dabei aber weiter beibehält.
-Es ist unglaublich schnell, äußerst effizient, wenn es um große Projekte geht, und es hat ein fantastisches Branching-Konzept für nicht-lineare Entwicklung (siehe Kapitel 3 <a href="{{< relurl "book/de/v2/ch00/ch03-git-branching" >}}">Git Branching</a>).</p>
+Es ist unglaublich schnell, äußerst effizient für große Projekte und es hat ein fantastisches Branching-Konzept für nicht-lineare Entwicklung (siehe Kapitel 3 <a href="{{< relurl "book/de/v2/ch00/ch03-git-branching" >}}">Git Branching</a>).</p>
 </div>
 <div id="nav"><a href="{{< previous-section >}}">prev</a> | <a href="{{< next-section >}}">next</a></div>
