--- a/external/book/content/book/de/v2/Erste-Schritte-Was-ist-Versionsverwaltung?.html
+++ b/external/book/content/book/de/v2/Erste-Schritte-Was-ist-Versionsverwaltung?.html
@@ -38,7 +38,7 @@ Die Dateien, die in den Beispielen in diesem Buch unter Versionsverwaltung geste
 <p>Wenn du Grafik- oder Webdesigner bist und jede Version eines Bildes oder Layouts behalten möchtest (was Du mit Sicherheit möchtest), ist die Verwendung eines Versionskontrollsystems (VCS) eine sehr kluge Sache.
 Damit kannst du ausgewählte Dateien auf einen früheren Zustand zurücksetzen, das gesamte Projekt auf einen früheren Zustand zurücksetzen, zurückliegende Änderungen vergleichen, sehen wer zuletzt etwas geändert hat, das möglicherweise ein Problem verursacht, wer wann ein Problem verursacht hat und vieles mehr.
 Die Verwendung eines VCS bedeutet im Allgemeinen auch, dass du problemlos eine Wiederherstellung durchführen könntest, wenn etwas kaputt geht oder Dateien verloren gehen.
-All diese Vorteile erhält man mit einen nur sehr geringen, zusätzlichen Aufwand.</p>
+All diese Vorteile erhält man mit einen nur sehr geringen zusätzlichen Aufwand.</p>
 </div>
 <div class="sect3">
 <h3 id="_lokale_versionsverwaltung">Lokale Versionsverwaltung</h3>
@@ -49,7 +49,7 @@ Dieser Ansatz ist sehr verbreitet, weil er so einfach ist, aber auch unglaublich
 Man arbeitet sehr leicht im falschen Verzeichnis, bearbeitet damit die falschen Dateien oder überschreibt Dateien, die man eigentlich nicht überschreiben wollte.</p>
 </div>
 <div class="paragraph">
-<p>Aus diesem Grund, haben Programmierer bereits vor langer Zeit, lokale Versionsverwaltungssysteme entwickelt, die alle Änderungen an allen relevanten Dateien in einer Datenbank verwalten.</p>
+<p>Aus diesem Grund, haben Programmierer bereits vor langer Zeit lokale Versionsverwaltungssysteme entwickelt, die alle Änderungen an allen relevanten Dateien in einer Datenbank verwalten.</p>
 </div>
 <div class="imageblock">
 <div class="content">
