--- a/external/book/content/book/de/v2/Git-Tools-Stashen-und-Bereinigen.html
+++ b/external/book/content/book/de/v2/Git-Tools-Stashen-und-Bereinigen.html
@@ -22,8 +22,8 @@ aliases:
 ---
 <h2 id="_git_stashing">Stashen und Bereinigen</h2>
 <div class="paragraph">
-<p>Es passiert manchmal, dass dein Projekt nach einer Bearbeitung in einem unordentlichen Zustand. Stelle dir vor du willst in einen anderen Branch wechseln, um an etwas anderem zu arbeiten.
-Das Problem ist, dass du keinen Commit mit halbfertiger Arbeit machen willst, nur um später an diesen Punkt zurückkehren zu können.
+<p>Es passiert manchmal, dass du mitten in der Bearbeitung deines Pojektes vorübergehend in einen anderen Branch wechseln musst, um an einem anderen Teil des Projektes zu arbeiten.
+Das Problem ist, du möchtest keinen Commit mit deiner halbfertigen Arbeit erstellen, nur um später an diesen Punkt zurückkehren zu können.
 Die Antwort auf dieses Problem ist der Befehl <code>git stash</code>.</p>
 </div>
 <div class="paragraph">
@@ -72,7 +72,7 @@ Changes not staged for commit:
 </div>
 </div>
 <div class="paragraph">
-<p>Du möchtest nun den Branch wechseln, aber du willst das bisherige noch nicht committen, also solltest du die Änderungen stashen.
+<p>Du möchtest nun den Branch wechseln, willst aber das bisherige noch nicht committen, also solltest du die Änderungen stashen.
 Um einen neuen Stash zu erstellen, führe <code>git stash</code> oder <code>git stash push</code> aus:</p>
 </div>
 <div class="listingblock">
@@ -95,7 +95,7 @@ nothing to commit, working directory clean</code></pre>
 </div>
 </div>
 <div class="paragraph">
-<p>An dieser Stelle kannst du die Branches wechseln und anderswo arbeiten. Deine Änderungen werden solange gespeichert.
+<p>An dieser Stelle kannst du die Branches wechseln und anderswo arbeiten. Deine angefangene Arbeit wird solange zwischengespeichert.
 Um zu sehen, welche Stashes du gespeichert hast, kannst du <code>git stash list</code> verwenden:</p>
 </div>
 <div class="listingblock">
@@ -109,8 +109,8 @@ stash@{2}: WIP on master: 21d80a5 Add number to log</code></pre>
 <div class="paragraph">
 <p>Hier wurden vorher schon zwei Stashes gespeichert, so dass du Zugriff auf drei verschiedene gestashte Arbeiten hast.
 Du kannst den soeben versteckten Stash erneut aufrufen, indem du den Befehl verwendest, der in der Hilfe-Anzeige des ursprünglichen Stash-Befehls angezeigt wird: <code>git stash apply</code>.
-Wenn du einen der früheren Stashes anwenden möchtest, kannst du ihn durch einen Namen angeben, etwa so: <code>git stash apply stash@{2}</code>.
-Wenn du keinen Stash angibst, nimmt Git den neuesten Stash und versucht, ihn zu übernehmen:</p>
+Wenn du einen der früheren Stashes anwenden möchtest, musst du diesen explizit benennen, etwa so: <code>git stash apply stash@{2}</code>.
+Wenn du keinen Stash-Namen angibst, nimmt Git den neuesten Stash und versucht, ihn zu übernehmen:</p>
 </div>
 <div class="listingblock">
 <div class="content">
@@ -128,15 +128,15 @@ no changes added to commit (use "git add" and/or "git commit -a")</code></pre>
 </div>
 <div class="paragraph">
 <p>Du kannst sehen, dass Git die Dateien, die du beim Speichern des Stashes zurückgesetzt hast, erneut modifiziert.
-In diesem Fall hattest du ein sauberes Arbeitsverzeichnis, als du versucht hast, den Stash anzuwenden den du auf den gleichen Branch anwenden wolltest, aus dem du ihn erzeugt hast.
-Ein sauberes Arbeitsverzeichnis und dessen Anwendung auf denselben Branch sind nicht nötig, um einen Stash erfolgreich anzulegen.
-Du kannst einen Stash in einem Branch speichern, später in einen anderen Branch wechseln und erneut versuchen, die Änderungen zu übernehmen.
-Du kannst auch geänderte und nicht übertragene Dateien in deinem Arbeitsverzeichnis haben, wenn du einen Stash anwendest. Git meldet dir Merge-Konflikte, wenn etwas nicht mehr sauber funktioniert.</p>
+In diesem Fall hast du versucht, den Stash auf ein sauberes Arbeitsverzeichnis anzuwenden, und zwar auf den gleichen Branch, aus dem du den Stash zuvor erzeugt hast.
+Ein sauberes Arbeitsverzeichnis und dessen Anwendung auf denselben Branch sind nicht nötig, um einen Stash erfolgreich anzuwenden.
+Du kannst einen Stash in einem Branch speichern, später in einen anderen Branch wechseln und versuchen, die Änderungen dort zu übernehmen.
+Du kannst auch geänderte und nicht übertragene Dateien in deinem Arbeitsverzeichnis haben, während du einen Stash anwendest. Git meldet dir Merge-Konflikte, wenn etwas nicht mehr sauber funktioniert.</p>
 </div>
 <div class="paragraph">
-<p>Die Änderungen an deinen Dateien wurden erneut angewendet, aber die Datei, die du zuvor bereitgestellt hast, wurde nicht neu eingestellt.
-Um das zu erreichen, musst du den Befehl <code>git stash apply</code> mit der Option <code>--index</code> ausführen und so dem Befehl anweisen, dass er versuchen soll, die gestagten Änderungen erneut anzuwenden.
-Hättest du stattdessen diesen Befehl ausgeführt, wärst du an deine ursprüngliche Position zurückgekehrt:</p>
+<p>Die Änderungen wurden erneut auf deine Dateien angewendet, aber die Datei, die zuvor bereits zum Commit vorgemerkt war, wurde der Staging-Area noch nicht wieder hinzugefügt.
+Um das zu erreichen, musst du den Befehl <code>git stash apply</code> stattdessen mit der Option <code>--index</code> ausführen und so dem Befehl anweisen, auch den vorherigen Zustand der Staging-Area wiederherzustellen.
+Auf diese Weise wärst du an deine ursprüngliche Position zurückgekehrt:</p>
 </div>
 <div class="listingblock">
 <div class="content">
