book: update zh
Updated via the `update-book.yml` GitHub workflow.

--- a/external/book/content/book/zh/v2/Git-基础-查看提交历史.html
+++ b/external/book/content/book/zh/v2/Git-基础-查看提交历史.html
@@ -27,7 +27,7 @@ aliases:
 完成这个任务最简单而又有效的工具是 <code>git log</code> 命令。</p>
 </div>
 <div class="paragraph">
-<p>我们使用一个非常简单的 ``simplegit'' 项目作为示例。
+<p>我们使用一个非常简单的 "simplegit" 项目作为示例。
 运行下面的命令获取该项目：</p>
 </div>
 <div class="listingblock">
